<resources>
    <string name="app_name">Movalid</string>
    <string name="movie">Movie</string>
    <string name="Serie">serie</string>
    <string name="popular">Popular</string>
    <string name="topRated">Top Rated</string>
    <string name="upComming">Up Comming</string>
    <string name="infoTable">Table with Contents</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_holder_search">Find Movies and Series</string>
    <string name="name_app">MOVALID</string>
</resources>
