<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="homeViewModel"
                type="com.carlosdp.movalid.screen.home.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".screens.home.HomeFragment">


        <Button
                android:text="@string/Serie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSeries" app:layout_constraintStart_toEndOf="@+id/buttonMovie"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonMovie"
                app:layout_constraintBottom_toBottomOf="@+id/buttonMovie" android:theme="@style/GoButton"/>
        <Button
                android:text="@string/movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMovie"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/buttonSeries" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp" android:theme="@style/GoButton"/>
        <Button
                android:text="@string/upComming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonUpComing" app:layout_constraintStart_toEndOf="@+id/buttonTopRated"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonTopRated"
                app:layout_constraintBottom_toBottomOf="@+id/buttonTopRated" android:theme="@style/SkipButton"/>
        <Button
                android:text="@string/topRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonTopRated"
                app:layout_constraintStart_toEndOf="@+id/buttonPopular" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/buttonUpComing"
                app:layout_constraintTop_toTopOf="@+id/buttonPopular"
                app:layout_constraintBottom_toBottomOf="@+id/buttonPopular" android:theme="@style/SkipButton"/>
        <Button
                android:text="@string/popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPopular"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/buttonTopRated" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonMovie" android:theme="@style/SkipButton"/>
        <TableLayout
                android:layout_width="395dp"
                android:layout_height="571dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonTopRated" android:layout_marginTop="24dp"
                android:id="@+id/tableHome" android:contentDescription="@string/infoTable"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_search"
                android:id="@+id/imageSearch"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/search"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>